--- a/assets/css/Navigation-with-Search.css
+++ b/assets/css/Navigation-with-Search.css
@@ -113,3 +113,24 @@
   background-color: transparent;
 }
 
+.h1 .question-no {
+  color: #000000;
+}
+
+.question-no {
+  color: black;
+}
+
+.far.fa-image.add-image-icon {
+  font-size: 40px;
+  text-align: center;
+}
+
+.choice-numbering {
+  color: black;
+}
+
+.add-image {
+  color: black;
+}
+
