--- a/assets/css/Navigation-with-Search.css
+++ b/assets/css/Navigation-with-Search.css
@@ -134,3 +134,12 @@
   color: black;
 }
 
+.btn.btn-primary.transition {
+  transition: .2s ease-in-out !important;
+}
+
+.btn.btn-primary.button-submit:hover {
+  background-color: #03688b !important;
+  color: white !important;
+}
+
